--- a/challenges/01-nesting/01/sass/style.sass
+++ b/challenges/01-nesting/01/sass/style.sass
@@ -1,6 +1,17 @@
-.primary-article 
+.primary-article
   padding: 3rem 1rem
 
+  .title
+    font-size: 5rem
 
-.pointing-list 
-  margin: 2rem 0
+    span
+      color: red
+
+.pointing-list
+  margin: 2em 0
+
+  li
+    padding-left: .5rem
+
+    &::marker
+      content: "👉"
