--- a/challenges/01-nesting/01/sass/style.scss
+++ b/challenges/01-nesting/01/sass/style.scss
@@ -1,7 +1,27 @@
 .primary-article {
-  padding: 3rem 1rem;
+	padding: 3rem 1rem;
+
+	.title {
+		font: {
+			size: 5rem;
+			weight: bold;
+			family: "arial";
+		}
+
+		span {
+			color: red;
+		}
+	}
 }
 
 .pointing-list {
-  margin: 2rem 0;
+	margin: 2rem 0;
+
+	li {
+		padding-left: 0.5rem;
+
+		&::marker {
+			content: "👉";
+		}
+	}
 }
