--- a/challenges/01-nesting/02/sass/styles.sass
+++ b/challenges/01-nesting/02/sass/styles.sass
@@ -5,15 +5,36 @@ $clr-secondary-500: hsl(253, 27%, 20%)
 $clr-accent-400: hsl(45, 82%, 65%)
 $clr-accent-500: hsl(45, 82%, 45%)
 
-body  
-  margin: 4rem 
-  font:  
-    size: 1.25rem 
-    family: system-ui, sans-serif 
-  text-align: center 
- 
-.btn  
-  /* your code starts here */
+body
+  margin: 4rem
+  font:
+    size: 1.25rem
+    family: system-ui, sans-serif
+  text-align: center
 
-  /* your code ends here */
- 
+.btn
+  display: inline-block
+  padding: 1em 2em
+  color: white
+  cursor: pointer
+  border: 0
+  text:
+    decoration: none
+    transform: uppercase
+  &__primary
+    background: $clr-primary-500
+
+    &:hover, &:focus
+      background: $clr-primary-400
+
+  &__secondary
+    background: $clr-secondary-500
+
+    &:hover, &:focus
+      background: $clr-secondary-400
+
+  &__accent
+    background: $clr-accent-500
+
+    &:hover, &:focus
+      background: $clr-accent-400
