--- a/challenges/02-variables/01/scss/variable-challenge.scss
+++ b/challenges/02-variables/01/scss/variable-challenge.scss
@@ -1,33 +1,59 @@
+$white: #f8f7f7;
+$black: #201e1f;
+$red: #da3f0b;
+
 * {
-  box-sizing: border-box;
-  margin: 0;
+	box-sizing: border-box;
+	margin: 0;
 }
 
 body {
-  font-size: 1.75rem;
-  font-family: system-ui, sans-serif;
-  line-height: 1.6;
+	font-size: 1.75rem;
+	font-family: system-ui, sans-serif;
+	line-height: 1.6;
 
-  /* this is being used to center the content on the screen */
-  display: grid;
-  height: 100vh;
-  place-items: center;
+	/* this is being used to center the content on the screen */
+	display: grid;
+	height: 100vh;
+	place-items: center;
 }
 
 .card {
-  display: grid;
-  gap: 0.75em;
-  width: min(90%, 60rem);
-  padding: 2em;
+	display: grid;
+	gap: 0.75em;
+	width: min(90%, 60rem);
+	padding: 2em;
+	box-shadow: 0 0 24px 0 $black;
+	border-radius: 16px;
 }
 
 .btn {
-  display: inline-block;
-  padding: 0.5em 1.5em;
-  text-decoration: none;
+	display: inline-block;
+	padding: 0.5em 1.5em;
+	text-decoration: none;
+	color: $white;
+	border-radius: 8px;
+
+	&:hover {
+		background-color: $black;
+		box-shadow: 0 0 12px 4px $red;
+	}
+
+	&--primary {
+		background-color: $red;
+	}
+
+	&--outline {
+		border: 1px solid $red;
+		color: $red;
+
+		&:hover {
+			color: $white;
+		}
+	}
 }
 
 .flex-group {
-  display: flex;
-  gap: 1rem;
+	display: flex;
+	gap: 1rem;
 }
